fix: update CORS config for Render frontend with cedentials